# stack-overflow-relay

./: .dockerignore  Cargo.toml  Dockerfile  Procfile  RustConfig  build.rs  fly.toml
.github/workflows/: deploy.yml
alictor/: Cargo.toml
alictor/alictor-derive/: Cargo.toml
alictor/alictor-derive/src/: lib.rs
alictor/src/: lib.rs
migrations/2020-12-11-023746_create_registrations/: up.sql
migrations/2020-12-19-191746_create_notifications/: down.sql  up.sql
migrations/2020-12-24-202440_create_pushover_users/: down.sql  up.sql
src/: config.rs  database.rs  domain.rs  error.rs  flow.rs  ios.rs  main.rs  poll_spawner.rs  pushover.rs  stack_overflow.rs  web_ui.rs
src/database/: models.rs  schema.rs
