[package]
name = "stack-overflow-relay"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", default-features = false, features = ["postgres"] }
dotenv = { version = "0.15.0", default-features = false }
futures = { version = "0.3.8", default-features = false, features = ["std"] }
maud = { version = "0.22.1", default-features = false }
once_cell = { version = "1.5.2", default-features = false, features = ["std"] }
parking_lot = { version = "0.11.1", default-features = false }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
reqwest = { version = "0.10.9", default-features = false, features = ["default-tls", "gzip", "json"] }
serde = { version = "1.0.117", default-features = false }
serde_urlencoded = { version = "0.7.0", default-features = false }
snafu = { version = "0.6.10", default-features = false, features = ["std"] }
tokio = { version = "0.2.23", default-features = false, features = ["macros", "blocking", "rt-threaded"] }
tracing = { version = "0.1.22", default-features = false }
tracing-subscriber = { version = "0.2.15", default-features = true }
url = { version = "2.2.0", default-features = false }
warp = { version = "0.2.5", default-features = false }
