[package]
name = "stack-overflow-relay"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vergen = { version = "8.0.0", default-features = false, features = ["git", "gitcl"] }

[dependencies]
alictor = { path = "alictor", default-features = false }

diesel = { version = "2.0.0", default-features = false, features = ["postgres"] }
dotenv = { version = "0.15.0", default-features = false }
futures = { version = "0.3.9", default-features = false, features = [ "async-await", "std"] }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
hyper = { version = "0.14.2", default-features = false }
maud = { version = "0.25.0", default-features = false }
once_cell = { version = "1.5.2", default-features = false, features = ["std"] }
parking_lot = { version = "0.12.0", default-features = false }
rand = { version = "0.8.1", default-features = false, features = ["std", "std_rng"] }
reqwest = { version = "0.11.0", default-features = false, features = ["default-tls", "gzip", "json"] }
serde = { version = "1.0.118", default-features = false, features = ["derive"] }
snafu = { version = "0.7.0", default-features = false, features = ["std"] }
tokio = { version = "1.1.0", default-features = false, features = ["rt", "macros", "rt-multi-thread", "time"] }
tracing = { version = "0.1.22", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["ansi", "fmt"] }
url = { version = "2.2.0", default-features = false }
warp = { version = "0.3.0", default-features = false }
