[package]
name = "alictor-derive"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro", "full", "printing"] }
quote = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false, features = ["proc-macro"] }
